--- a/HedgeModManager/Languages/zh-CN.xaml
+++ b/HedgeModManager/Languages/zh-CN.xaml
@@ -12,6 +12,7 @@
     <system:String x:Key="CommonUINo"       >否</system:String>
     <system:String x:Key="CommonUIRetry"    >重试</system:String>
     <system:String x:Key="CommonUIUpdate"   >更新</system:String>
+    <system:String x:Key="CommonUIDownload" >下载</system:String>
     <system:String x:Key="CommonUIDelete"   >删除</system:String>
     <system:String x:Key="CommonUINone"     >没有</system:String>
     <system:String x:Key="CommonUIIgnore"   >忽略</system:String>
@@ -29,7 +30,7 @@
     <system:String x:Key="MainUISaveAndPlay"        >保存并开始游戏</system:String>
     <system:String x:Key="MainUIPlay"               >开始游戏</system:String>
     <system:String x:Key="MainUIMLDownloadFail"     >无法下载 mod加载器</system:String>
-	<system:String xml:space="preserve" x:Key="MainUIMLInstallFail">无法安装 mod加载程序。&#x0a;请确保您有写入游戏文件的权限。</system:String>
+    <system:String xml:space="preserve" x:Key="MainUIMLInstallFail">无法安装 mod加载程序。&#x0a;请确保您有写入游戏文件的权限。</system:String>
     <system:String xml:space="preserve" x:Key="MainUIMLUninstallFail">无法卸载 mod加载程序。&#x0a;请确保当前没有游戏正在运行。</system:String>
 
     <!-- Mods UI Strings -->
@@ -47,14 +48,14 @@
     <system:String x:Key="ModsUIModEdit"        >更改 mod内客</system:String>
     <system:String x:Key="ModsUIModDelete"      >删除 mod</system:String>
     <system:String x:Key="ModsUIModDragDrop"    >拖放项目以更改 mod的加载顺序。</system:String>
-	<system:String x:Key="ModsUISearch"         >搜寻： </system:String>
+    <system:String x:Key="ModsUISearch"         >搜寻： </system:String>
     <system:String xml:space="preserve" x:Key="ModsUIInvalidIncludeDirs">Hedge Mod Manager已检测到一个或多个 mod包含无效的包含目录。&#x0a;您是否希望Hedge Mod Manager尝试解决此问题？</system:String>
 
     <!-- Codes UI Strings -->
     <system:String x:Key="CodesUIName"    >名称</system:String>
     <system:String x:Key="CodesUIDownload">下载社区代码</system:String>
     <system:String x:Key="CodesUIUpdate"  >更新社区代码</system:String>
-	<system:String x:Key="CodesUISearch"  >搜寻： </system:String>
+    <system:String x:Key="CodesUISearch"  >搜寻： </system:String>
     <system:String xml:space="preserve" x:Key="CodesUIVersionIncompatible">安装的代码与代码加载器不相容。&#x0a;请更新代码和代码加载器。&#x0a;警告：这将删除所有自定义代码。</system:String>
 
     <!-- Settings UI Strings -->
@@ -92,9 +93,11 @@
     <system:String x:Key="MainUIRuntimeMissingTitle" >检测到缺少运行环境！</system:String>
     <system:String x:Key="MainUIRuntimeMissingMsg" xml:space="preserve">{0} 需要 {1} 安装在 mod上 &#x0a;来正常运行, 你想要使用HMM来安装这个运行环境吗？ </system:String>
     <system:String x:Key="MainUISaveFileRedirectionDisabled" xml:space="preserve">使用一个或多个的 mod时需要启用「保存文件重新定向」才能正常工作。 需要启用此功能吗？＆＃x0a;（当您知道自己在做什么时候才单击否。）</system:String>
-	<system:String x:Key="MainUIMissingDependsHeader" xml:space="preserve">无法解决 mod依赖</system:String>
+    <system:String x:Key="MainUIMissingDependsHeader" xml:space="preserve">无法解决 mod依赖</system:String>
     <system:String x:Key="MainUIMissingDepends" xml:space="preserve"      >以下 mod缺少依赖项：</system:String>
-
+    <system:String x:Key="MainUIMissingDependsResolve">修正 GameBanana mods</system:String>
+    <system:String x:Key="MainUIResolvable" xml:space="preserve">通过单击 「解决 GB Mods」，可以从 GameBanana &#x0a; 自动修正一个或多个依赖项。</system:String>
+    
     <!-- OptionsWindow UI Strings -->
     <system:String x:Key="OptionsWindowUIError"      >请选择一个选项！</system:String>
 
@@ -153,7 +156,7 @@
 
     <!-- Dialog UI Strings -->
     <system:String xml:space="preserve" x:Key="DialogUINoModsFolder">Hedge Mod Manager 未检测到任何 mods 文件夹。&#x0a;是否创建一个 mods 文件夹吗？</system:String>
-    <system:String xml:space="preserve" x:Key="DialogUIDeleteMod">您确定要删除 "{0}"？&#x0a;此操作无法滚回！</system:String>
+    <system:String xml:space="preserve" x:Key="DialogUIDeleteMod">您确定要删除 「{0}」？&#x0a;此操作无法滚回！</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModNewest">{0} 已经是最新的。</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModUpdate">({1}) 已找到可用的 {0} 的较新版本！</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModCancelUpdate">您确定要取消更新吗？&#x0a;这可能会损坏 {0}</system:String>
@@ -179,8 +182,10 @@
     <system:String x:Key="ModDownloaderNoGameMes">Hedge Mod Manager无法找到 {0} 安装程序</system:String>
 
     <!-- Mod Updates Window Strings -->
-    <system:String x:Key="ModUpdatesChangelog">变更日志</system:String>
-    <system:String x:Key="ModUpdatesTitle"    >mod 更新</system:String>
+    <system:String x:Key="ModUpdatesChangelog"    >变更日志</system:String>
+    <system:String x:Key="ModDownloadsDescription">描述</system:String>
+    <system:String x:Key="ModUpdatesTitle"        >mod 更新</system:String>
+    <system:String x:Key="ModDownloadsTitle"      >mod 下载</system:String>
 
     <!-- Themes -->
     <system:String x:Key="ThemeDark">暗黑模式</system:String>
