--- a/HedgeModManager/Languages/en-US.xaml
+++ b/HedgeModManager/Languages/en-US.xaml
@@ -50,6 +50,7 @@
     <system:String x:Key="ModsUIModDragDrop"    >Drag and drop items to change the load order of mods.</system:String>
     <system:String x:Key="ModsUISearch"         >Search: </system:String>
     <system:String xml:space="preserve" x:Key="ModsUIInvalidIncludeDirs">Hedge Mod Manager has detected that one or more mods have invalid include directories.&#x0a;Do you want Hedge Mod Manager to attempt to fix this?</system:String>
+    <system:String xml:space="preserve" x:Key="ModsUINoMods">...There is not a lot here.&#x0a;Go get some mods!</system:String>
 
     <!-- Codes UI Strings -->
     <system:String x:Key="CodesUIName"    >Name</system:String>
@@ -57,6 +58,7 @@
     <system:String x:Key="CodesUIUpdate"  >Update Community Codes</system:String>
     <system:String x:Key="CodesUISearch"  >Search: </system:String>
     <system:String xml:space="preserve" x:Key="CodesUIVersionIncompatible">The installed codes are incompatible with the code loader.&#x0a;Please update the codes and the code loader.&#x0a;WARNING: This will erase any custom codes.</system:String>
+    <system:String xml:space="preserve" x:Key="CodesUIFetching">Fetching codes...</system:String>
 
     <!-- Settings UI Strings -->
     <!--   Game & Mod Loader -->
