--- a/HedgeModManager/UI/ExceptionWindow.xaml
+++ b/HedgeModManager/UI/ExceptionWindow.xaml
@@ -6,11 +6,11 @@
              xmlns:local="clr-namespace:HedgeModManager"
              mc:Ignorable="d" 
              MinHeight="600" MinWidth="1000"
-             Height="600" Width="1000" Title="HedgeModManager Crash"
+             Height="600" Width="1000" Title="{DynamicResource ExceptionWindowTitle}"
              WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Style="{StaticResource HedgeWindow}">
     <Grid>
         <Label x:Name="Status" Content="{Binding UpdateStatus}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" Background="#000000"/>
-        <Label x:Name="Header" Content="Hedge Mod Manager Has Thrown an Exception!" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="62" Width="780" FontSize="36" Foreground="#0066CC"/>
+        <Label x:Name="Header" Content="{DynamicResource ExceptionWindowCrash}" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="62" Width="780" FontSize="36" Foreground="#0066CC"/>
         <TextBox x:Name="TextBox_ExceptionInfo" Margin="10,77,10,70" Text="Exception Info goes here" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" 
                  IsReadOnly="True" Foreground="{DynamicResource HMM.Menu.DisabledTextColor}" />
         <Grid Margin="10,0,10,10" VerticalAlignment="Bottom" Height="44">
@@ -19,10 +19,9 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="Button_CopyLog" Grid.Column="0" Content="Copy Log to Clipboard" HorizontalAlignment="Stretch" Margin="10,0,10,0"  VerticalAlignment="Stretch" Click="Button_CopyLog_Click" />
-            <Button x:Name="Button_Ignore" Grid.Column="1" Content="Ignore and Close" HorizontalAlignment="Stretch" Margin="10,0,10,0"  VerticalAlignment="Stretch" Click="Button_Ignore_Click" />
-            <Button x:Name="Button_Report" Grid.Column="2" Content="Submit Report on GitHub" HorizontalAlignment="Stretch" Margin="10,0,10,0"  VerticalAlignment="Stretch" Click="Button_Report_Click"/>
+            <Button x:Name="Button_CopyLog" Grid.Column="0" Content="{DynamicResource ExceptionWindowButtonCopyLog}" HorizontalAlignment="Stretch" Margin="10,0,10,0"  VerticalAlignment="Stretch" Click="Button_CopyLog_Click" />
+            <Button x:Name="Button_Ignore" Grid.Column="1" Content="{DynamicResource ExceptionWindowButtonIgnore}" HorizontalAlignment="Stretch" Margin="10,0,10,0"  VerticalAlignment="Stretch" Click="Button_Ignore_Click" />
+            <Button x:Name="Button_Report" Grid.Column="2" Content="{DynamicResource ExceptionWindowButtonReport}" HorizontalAlignment="Stretch" Margin="10,0,10,0"  VerticalAlignment="Stretch" Click="Button_Report_Click"/>
         </Grid>
-
     </Grid>
 </Window>
